[gd_scene load_steps=7 format=2]

[ext_resource path="res://UI/InventoryDecour.png" type="Texture" id=1]
[ext_resource path="res://UI/InventoryCloseButton.png" type="Texture" id=2]
[ext_resource path="res://UI/InventoryBackground.png" type="Texture" id=3]
[ext_resource path="res://UI/InventoryBorder.png" type="Texture" id=4]
[ext_resource path="res://UI/InventoryBorderFlipped.png" type="Texture" id=5]
[ext_resource path="res://Control.gd" type="Script" id=6]

[node name="InventoryGUI" type="Control"]
rect_scale = Vector2( 0.75, 0.75 )
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="TextureRect" parent="."]
margin_left = 5.0
margin_top = 6.0
margin_right = 45.0
margin_bottom = 46.0
texture = ExtResource( 3 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Edges" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Up" type="TextureRect" parent="Edges"]
margin_left = 7.0
margin_top = 4.0
margin_right = 41.0
margin_bottom = 6.0
texture = ExtResource( 5 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Down" type="TextureRect" parent="Edges"]
margin_left = 7.0
margin_top = 46.0
margin_right = 43.0
margin_bottom = 48.0
texture = ExtResource( 5 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Left" type="TextureRect" parent="Edges"]
margin_left = 3.0
margin_top = 8.0
margin_right = 5.0
margin_bottom = 44.0
texture = ExtResource( 4 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Right" type="TextureRect" parent="Edges"]
margin_left = 45.0
margin_top = 11.0
margin_right = 47.0
margin_bottom = 44.0
texture = ExtResource( 4 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Decorations" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TopLeft" type="TextureRect" parent="Decorations"]
margin_top = 1.0
margin_right = 7.0
margin_bottom = 8.0
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BottomLeft" type="TextureRect" parent="Decorations"]
margin_top = 51.0
margin_right = 7.0
margin_bottom = 58.0
rect_rotation = -89.9999
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BottomRight" type="TextureRect" parent="Decorations"]
margin_left = 50.0
margin_top = 44.0
margin_right = 57.0
margin_bottom = 51.0
rect_rotation = 90.0
texture = ExtResource( 1 )
flip_h = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CloseButton" type="TextureButton" parent="."]
margin_left = 41.0
margin_right = 52.0
margin_bottom = 12.0
rect_min_size = Vector2( 11, 12 )
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 2 )
texture_hover = ExtResource( 2 )
texture_disabled = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Slots" type="GridContainer" parent="."]
margin_left = 9.0
margin_top = 10.0
margin_right = 45.0
margin_bottom = 46.0
custom_constants/vseparation = 4
custom_constants/hseparation = 4
columns = 2
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="CloseButton" to="." method="_on_CloseButton_pressed"]
